tests/additional/fail/op_bin.mvm
string x;
double y;

x = 'abc';
y = 3.4;

print(x * y);
